--- a/_config.yml
+++ b/_config.yml
@@ -39,13 +39,13 @@ heading_anchors: true
 # Navigation links
 navbar_links:
   - title: Day 1
-    url: /content/day01/embed.html
+    url: "/content/day01/embed.html"
   - title: Day 2
-    url: content/day02/embed.html
+    url: "/content/day02/embed.html"
   - title: Day 3
-    url: /content/day03/embed.html
+    url: "/content/day03/embed.html"
   - title: Day 4
-    url: content/day04/embed.html
+    url: "/content/day04/embed.html"
   
       # Add more sections as needed
 
