--- a/_config.yml
+++ b/_config.yml
@@ -40,31 +40,24 @@ heading_anchors: true
 # nav_sort: case_insensitive # default, equivalent to nil
 nav_sort: case_sensitive # Capital letters sorted before lowercase
 
-
 # Navigation links
 nav:
   - Home: '/'
-  - Day 1: "/content/day01"
-      - 01: "/content/day01/01/embed.html"
-      - 02: "/content/day01/02/embed.html"
-      - 03: "/content/day01/03/embed.html"
-      - 04: "/content/day01/04/embed.html"
-
-
-  - Day 2: "/content/day02"
-      - 01: "/content/day02/01/embed.html"
-      - 02: "/content/day02/02/embed.html"
-
-  - Day 3: "/content/day03"
-      - 01: "/content/day03/01/embed.html"
-      - 02: "/content/day03/02/embed.html"
-
-  - Day 4: "/content/day04"
-      - 01: "/content/day04/01/embed.html"
-
+  - Day 1:
+      - '01': '/content/day01/01/embed.html'
+      - '02': '/content/day01/02/embed.html'
+      - '03': '/content/day01/03/embed.html'
+      - '04': '/content/day01/04/embed.html'
+  - Day 2:
+      - '01': '/content/day02/01/embed.html'
+      - '02': '/content/day02/02/embed.html'
+  - Day 3:
+      - '01': '/content/day03/01/embed.html'
+      - '02': '/content/day03/02/embed.html'
+  - Day 4:
+      - '01': '/content/day04/01/embed.html'
   
-  
-      # Add more sections as needed
+# Add more sections as needed
 
 # Aux links for the upper right navigation
 aux_links:
@@ -73,10 +66,6 @@ aux_links:
 
 # Makes Aux links open in a new tab. Default is false
 aux_links_new_tab: true
-
-# Sort order for navigation links
-# nav_sort: case_insensitive # default, equivalent to nil
-#nav_sort: case_sensitive # Capital letters sorted before lowercase
 
 # Back to top link
 back_to_top: true
